tests/baselines/reference/letInVarDeclOfForIn_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
letInVarDeclOfForIn_ES5.ts(2,10): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
letInVarDeclOfForIn_ES5.ts(5,11): error TS1212: Identifier expected. 'let' is a reserved word in strict mode.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== letInVarDeclOfForIn_ES5.ts (2 errors) ====
    // should not be an error
    for (var let in [1,2,3]) {}
             ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    
    {
    	for (var let in [1,2,3]) {}
    	         ~~~
!!! error TS1212: Identifier expected. 'let' is a reserved word in strict mode.
    }
    